--- a/lab2/app/src/main/res/layout/activity_main.xml
+++ b/lab2/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    
     >
 
 
@@ -26,6 +24,7 @@
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
+        android:textSize="34dp"
          />
 
 
@@ -37,7 +36,7 @@
         android:inputType="text"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/textView"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="100dp"
         />
 
 
@@ -45,7 +44,7 @@
         android:id="@+id/buttonAddFood"
         android:layout_width="241dp"
         android:layout_height="55dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="30dp"
         android:text="ADD FOOD"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/textInput" />
