--- a/FoodiePalBayar/app/src/main/res/layout/dialog_add_recipe.xml
+++ b/FoodiePalBayar/app/src/main/res/layout/dialog_add_recipe.xml
@@ -5,20 +5,13 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/meal_weekday"
+    <EditText
+        android:id="@+id/editTextRecipeTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:hint="Recipe Title" />
 
-    <TextView
-        android:id="@+id/meal_mealplan"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14sp" />
-
-
+    <!-- Add other EditTexts for imageResource, cookingTime, and rating -->
+    <!-- For imageResource, you might want to use an ImageView and a button to select an image -->
 
 </LinearLayout>
