--- a/FoodiePalBayar/app/src/main/res/layout/fragment_meals.xml
+++ b/FoodiePalBayar/app/src/main/res/layout/fragment_meals.xml
@@ -5,7 +5,7 @@
     android:padding="16dp">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/meal_planner_recycler_view"
+        android:id="@+id/meals_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
