--- a/FoodiePalBayar/app/src/main/res/layout/item_recipe.xml
+++ b/FoodiePalBayar/app/src/main/res/layout/item_recipe.xml
@@ -31,6 +31,6 @@
         android:layout_height="wrap_content"
         android:numStars="5"
         android:stepSize="0.5"
-        android:isIndicator="true" />
+        android:isIndicator="false" />
 
 </LinearLayout>
