--- a/GardeningJournalBayar/app/src/main/res/values/colors.xml
+++ b/GardeningJournalBayar/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#2E48DA</color>
+    <color name="blue0">#8896E6</color>
 </resources>
