--- a/GardeningJournalBayar/app/src/main/res/layout/fragment_home.xml
+++ b/GardeningJournalBayar/app/src/main/res/layout/fragment_home.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_purple"
     tools:context=".HomeFragment">
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/blogs_recycler_view"
         android:layout_width="match_parent"
+        android:layout_marginTop="80dp"
         android:layout_height="match_parent" />
 
-</FrameLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/ic_add" />
+</RelativeLayout>
