--- a/GardeningJournalBayar/app/src/main/res/layout/fragment_plant_details.xml
+++ b/GardeningJournalBayar/app/src/main/res/layout/fragment_plant_details.xml
@@ -1,19 +1,42 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
-
     <TextView
         android:id="@+id/textViewPlantName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="80dp"
         android:text="Plant Name"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+    <TextView
+        android:id="@+id/textViewPlantId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Plant ID"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
-    <!-- Additional TextViews and Views to display plant details -->
+    <TextView
+        android:id="@+id/textViewPlantType"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Plant Type"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+
+    <TextView
+        android:id="@+id/textViewWateringFrequency"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Watering Frequency"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+
+    <TextView
+        android:id="@+id/textViewPlantingDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Planting Date"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
 </LinearLayout>
